# english_vocabulary_test

./: .gitignore  Cargo.toml  README.md  install.sh
example_of_card_list/: answer_of_example_of_card_list.tex  exam_of_example_of_card_list.tex  example_of_card_list.toml
script/: make_exam_pdf.sh
src/: .tags  activate.rs  book.rs  card.rs  cli.rs  exam_maker.rs  lib.rs  main.rs  test.tex
