[package]
name = "english_vocabulary_test"
version = "0.1.0"
edition = "2021"
publish = false
default-run = "english_vocabulary_test"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = {version = "3.1", features = ["derive"]}
clap_complete = "3.1"
getset = "0.1"
itertools="0.10"
rand = "0.8"
serde="1.0"
serde_derive = "1.0"
toml = "0.5"
